[DevTools] Skip pause at DOM breakpoint when breakpoints are deactivated

BUG=596333
R=dgozman@chromium.org

Review URL: https://codereview.chromium.org/1822793003

Cr-Commit-Position: refs/heads/master@{#382403}

Former-commit-id: 6e205b97acae0b352132fe846e251c7467ce8bb4