third_party/WebKit/Source/platform/v8_inspector/V8DebuggerImpl.h
@@ -64,6 +64,7 @@ public:
     String16 setBreakpoint(const String16& sourceID, const ScriptBreakpoint&, int* actualLineNumber, int* actualColumnNumber, bool interstatementLocation);
     void removeBreakpoint(const String16& breakpointId);
     void setBreakpointsActivated(bool);
+    bool breakpointsActivated() const { return m_breakpointsActivated; }
 
     enum PauseOnExceptionsState {
         DontPauseOnExceptions,
